Added basic facial recognition

--- a/webserver/public/submit.html
+++ b/webserver/public/submit.html
@@ -18,7 +18,7 @@
 <h1> Your config file has been submitted!</h1>
     <h2> The file is located in the json folder in the main directory</h2>
     <h2> If you want to change your settings navigate to the previous page and submit a new form using the name you previously submitted.</h2>
-	<h2> You can now upload your images for facial recognition</h2>
+	<h2> You can now upload your images for facial recognition. To upload multiple images make sure to select multiple images at once when prompted.</h2>
 	<form id="frmUploader" enctype="multipart/form-data" action="api/Upload/" method="post">
     <input type="file" name="imgUploader" multiple />
     <input type="submit" name="submit" id="btnSubmit" value="Upload" /> </form>
