--- a/webserver/public/index.html
+++ b/webserver/public/index.html
@@ -74,6 +74,31 @@
     		<option value="left" selected="selected">Left</option>
     		<option value="right">Right</option>
     	</select>
+	</div>
+	<div class="form-group">
+    	<label for="weatherCheckbox">Enable Stock Quotes?</label><br><br>
+		<input type="radio" id="enable" name="stockCheckbox" value="enable">
+		<label for="stockEnable">Enable</label>
+        <input type="radio" id="disable" name="stockCheckbox" value="disable" checked>
+        <label for="stockDisable">Disable</label>
+    </div>
+    <div class="form-group">
+    	<label for="stockFrame">Select top or bottom frame for Stock Quotes:</label>
+    	<select name="stockFrame" class="form-control">
+    		<option value="topFrame" selected="selected">Top</option>
+    		<option value="bottomFrame">Bottom</option>
+    	</select>
+    </div>
+    <div class="form-group">
+    	<label for="stockSide">Select Left or Right side for Stock Quotes:</label>
+    	<select name="stockSide" class="form-control">
+    		<option value="left" selected="selected">Left</option>
+    		<option value="right">Right</option>
+    	</select>
+	</div>
+	<div class="form-group">
+    	<label for="stockList">Enter up to 5 stocks that you want to follow. Seperate with commas:</label><br><br>
+        <input type="input" id="stockList" name="stockList"><br>
     </div>
     <p>
         <input type="submit" value="Submit" class="btn btn-primary btn-block" />
