--- a/webserver/public/complete.html
+++ b/webserver/public/complete.html
@@ -3,17 +3,22 @@
 <head>
     <meta charset="utf-8" />
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <title>Images uploaded</title>
     <script src="scripts/jquery-3.4.1.min.js"></script>
     <script src="scripts/jquery.form.min.js"></script>
 </head>
 <body>
-<div class="wrapper">
-<h1> JVacation Smart Mirror</h1>
-<h1> Your images have been submitted!</h1>
-    <form action="/complete" method="POST">
+    <form id="complete" action="/complete" method="POST">
+    <h1> JVacation Smart Mirror</h1>
+    <div class="form-group">
+    <h2> Your photos have been uploaded!</h2>
+    <div class="form-group-wrapper">
+    <p>Your photos have now been uploaded are on the system. The run the facial recoginition tool to read your facial data from the photos click the button below. Once clicked it will run the tool and delete the photos after.<br><br>
+    The mirror will then know your face from others and will be able to recognise when you stand in front of the mirror. Once it has detected you it will display your name on the splash screen and will load your face configuration within 10 seconds.</p>
     <input type="submit" value="Click here to finish"/>
+        </div>
+        </div>
     </form>
-</div>
 </body>
 </html>
