--- a/webserver/public/index.html
+++ b/webserver/public/index.html
@@ -95,7 +95,7 @@ function myFunction() {
 	<div class="form-group">
         <h2>Stock Quotes</h2>
         <div class="form-group-wrapper">
-    	<label for="weatherCheckbox">Enable Stock Quotes?</label>
+    	<label for="stockCheckbox">Enable Stock Quotes?</label>
 		<input type="radio" id="enable" name="stockCheckbox" value="enable">
 		<label for="stockEnable">Enable</label>
         <input type="radio" id="disable" name="stockCheckbox" value="disable" checked>
@@ -112,6 +112,17 @@ function myFunction() {
     	</select><br>
     	<label for="stockList">Enter up to 5 stocks that you want to track. Seperate with commas:</label><br>
         <input type="input" id="stockList" name="stockList"><br>
+        </div>
+    </div>
+    <div class="form-group">
+        <h2>Inspirational Quotes</h2>
+        <div class="form-group-wrapper">
+    	<label for="quoteCheckbox">Enable Inspirational Quotes?</label>
+		<input type="radio" id="enable" name="quoteCheckbox" value="enable">
+		<label for="quoteEnable">Enable</label>
+        <input type="radio" id="disable" name="quoteCheckbox" value="disable" checked>
+        <label for="quoteDisable">Disable</label><br>
+            <p>Quotes can only be in the middle of the mirror</p>
         </div>
     </div>
     <p>
