--- a/webserver/public/index.html
+++ b/webserver/public/index.html
@@ -90,6 +90,18 @@ function myFunction() {
     		<option value="left" selected="selected">Left</option>
     		<option value="right">Right</option>
     	</select>
+        <br>
+        <label for="newsCategory">Select Category for News:</label>
+        <select name="newsCategory" class="form-control">
+    		<option value="HEADLINES" selected="selected">Headlines</option>
+            <option value="BUSINESS">Business</option>
+            <option value="TECHNOLOGY">Technology</option>
+            <option value="ENTERTAINMENT">Entertainment</option>
+            <option value="SPORTS">Sports</option>
+            <option value="SCIENCE">Science</option>
+            <option value="WORLD">World</option>
+            <option value="HEALTH">Health</option>
+    	</select>
         </div>
 	</div>
 	<div class="form-group">
